Fix navbar background color
Transparent doesn't look good when you scroll down ...

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -3,7 +3,7 @@ $brand-primary: #59ae44;
 $panel-default-border: #ddd;
 $panel-default-heading-bg: transparent !default;
 
-$navbar-default-bg: transparent !default;
+$navbar-default-bg: white !default;
 $navbar-default-border: transparent !default;
 $navbar-default-brand-color: $brand-primary;
 
